# FS_GPlib-tutorial

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: .readthedocs.yaml  Makefile  auto_translate_po.py  pyproject.toml  readme.md  requirements.txt
docs/build.html/: .buildinfo  .buildinfo.bak  advanced.html  api_example.html  bibliography.html  custom_model.html  genindex.html  index.html  installation.html  library.html  objects.inv  overview.html  rst_template.html  search.html  searchindex.js  tutorial.html
docs/build.html/.doctrees/: advanced.doctree  bibliography.doctree  custom_model.doctree  environment.pickle  index.doctree  installation.doctree  library.doctree  overview.doctree  rst_template.doctree  tutorial.doctree
docs/build.html/_sources/: custom_model.rst.txt  index.rst.txt  installation.rst.txt  library.rst.txt  overview.rst.txt  tutorial.rst.txt
docs/build.html/installation/: environment.html  index.html  install.html
docs/source/:  refs.bib  advanced.rst  bibliography.rst  conf.py  conf.py.BAK  custom_model.rst  index.rst  overview.rst  rst_template.rst  tutorial.rst
docs/source/_templates/: layout.html
docs/source/influence_maximization/: index.rst
src/fs_gplib/: __init__.py  utils.py
src/fs_gplib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fs_gplib/DistributedComputing/: DistributedComputing.py  __init__.py
src/fs_gplib/Dynamic/: DyKerteszThresholdModel.py  DySEIRModel.py  DySEIRctModel.py  DySEISModel.py  DySEISctModel.py  DySIModel.py  DySIRModel.py  DySISModel.py  DySWIRModel.py  base.py  (+2 more)
(+51 files in other folders)
